# Projects

./: .gitignore  Use Case - Triage.docx  git-helper.ps1
Datasets/ProjectGutenberg/: data_clean.py  data_prep.py  llm_prompt.py  main.py  readme.md
Extract Text From Video/: ExtractText.py
GPT/: readme.md
GPT/GPT_Tokenizer/: 1_rough_thoughts.ipynb  2_BPE.ipynb  3_BPE_algorithm.ipynb  BPE_Tokenizer.py  main.py  readme.md
GPT/GPT_nano/: main.ipynb  readme.md  tokenizer_mappings.pkl
Gradio-UI/: main.py  pyproject.toml
GraphRAG/: README.md  build_graph.py  requirements.txt  visualize_graph.py
GraphRAG/finance_rag_project/: settings.yaml
GraphRAG/finance_rag_project/input/: finance_report.txt  (+1 more)
GraphRAG/ragtest/: settings.yaml
MCP/: datawriter.py
MCP/anthropic_server_test/: pyproject.toml
MCP/mcp-multiagent-system/: README.MD  dir_structure.txt  requirements.txt
Outlier Detection ML/: app.py  requirements.txt
Solaris/: app.py  notes.txt  readme.md  requirements.txt
Solaris/Notes/: System_Architecture_Prompt_Agent.pptx  dir_structure.txt  notes.txt
Solaris/utility/: chat_llm.py  config.ini
Terror Attacks in India from 1972 to 2019/: Terror Attacks in India from 1972 to 2019.ipynb
Terror Attacks in India from 1972 to 2019/Dataset/: Extracted_Data_of_India.csv
credsafe/: index.html
general_utilities/: dir_structure.py  requirements.txt
general_utilities/ollama/: app.py  config.ini
knowledge_graph/: notes.concepts
langgraph-agent/: pyproject.toml
langgraph-agent/agent/: endpoint.py  endpoint_test.py  main.py  requirements.txt
(+377 files in other folders)
