[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "openai>=2.3.0",
    "pydantic>=2.11.9",
    "uvicorn>=0.37.0",
]
